# remoras

./: .gitignore  LICENSE.txt  README.md  main.py  pyproject.toml  requirements.txt  test_manager.py
.github/workflows/: python-package.yml  python-publish.yml
genius/: __init__.py  manager.py  structs.py
remoras/: __init__.py  data_validation.py  exceptions.py  manager.py  manager2.py  structs.py  utils.py
