[project]
name = "remoras"
version = "1.0.0"
description = "A simple project manager for the Genius Hackathon API. Allows for project creation, management, and interactions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ['requests']

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
